# test_module

./: .gitmodules
.github/workflows/: android.yml
module/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  main.cpp
